Add icon & Update ComponentInfo (#909)
* Update new_icons.yaml (Linphone)

* Add "英語の友" icon as "eigonotomo"

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,7 @@
 #
 japan_digital_authentication_app:
   - jp.go.digital.auth_and_sign/jp.go.digital.auth_and_sign.ui.main.MainActivity
+linphone:
+  - org.linphone/org.linphone.ui.main.MainActivity
+eigonotomo:
+  - jp.co.obunsha.eigonotomo/jp.co.obunsha.eigonotomo.activity.SplashActivity
