--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,84 @@ linphone:
   - org.linphone/org.linphone.ui.main.MainActivity
 eigonotomo:
   - jp.co.obunsha.eigonotomo/jp.co.obunsha.eigonotomo.activity.SplashActivity
+
+asr_voice_recorder:
+  - com.nll.asr/com.nll.asr.ui.MainActivity
+  - com.nll.asr.license/com.nll.asr.license.MainActivity
+
+bradesco:
+  - com.bradesco/br.com.bradesco.integrador.splash.SplashIconDefault
+
+bradesco_alt_1: {}
+
+cartoes_caixa:
+  - br.gov.caixa.cartoes/br.gov.caixa.cartoes.activities.SplashActivity_
+
+consumidor:
+  - br.com.consumidor/br.com.consumidor.MainActivity
+
+decolar:
+  - com.gm.decolar/com.despegar.whitelabel.home.ui.splash.SplashActivity
+
+du_chinese:
+  - org.sinamon.duchinese/org.sinamon.duchinese.views.MainActivity
+
+du_chinese_alt_1: {}
+
+e_cidadao_saude:
+  - com.ecidadao.saude/crc64016b7bd4896e8d5e.MainActivity
+
+gov_br:
+  - br.gov.meugovbr/br.gov.meugovbr.MainActivity
+
+gov_br_alt_1:
+  - br.gov.meugovbr/br.gov.meugovbr.MainActivity
+
+gsam_battery_monitor_alt_1: {}
+
+havan:
+  - com.artech.eaplic.havan/br.com.havan.app.AppActivity
+
+immersive_chinese:
+  - com.immersive.chinese/com.immersive.chinese.Activity.SplashActivity
+
+immersive_chinese_alt_1: {}
+
+immersive_chinese_alt_2: {}
+
+immersive_chinese_alt_3: {}
+
+jaumo:
+  - com.jaumo/com.jaumo.Main
+
+liquid_teardown_battery:
+  - com.intik.teardown/com.intik.teardown.Home
+
+lucky_patcher: {}
+
+micro_gesture:
+  - me.i38.gesture/me.i38.gesture.SettingActivity
+
+musicolet_alt_1: {}
+
+real_drum:
+  - br.com.rodrigokolb.realdrum/br.com.rodrigokolb.realdrum.MainActivity
+
+reddit_alt_5:
+  - com.reddit.frontpage/com.reddit.frontpage.StartActivity
+
+service_center:
+  - com.easycontrol.customercenter/com.easycontrol.customercenter.ui.MainActivity
+
+service_center_alt_1: {}
+
+simple_abp:
+  - mdmt.sabp.free/mdmt.sabp.free.A
+
+tasker_settings: {}
+
+tool_box_maxcom:
+  - maxcom.toolbox.free/maxcom.toolbox.free.ToolBoxMainAct
+
+wifi_mouse:
+  - com.necta.wifimousefree/com.necta.wifimousefree.material.MainActivity
