--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,10 +8,13 @@
 #
 # new_icon_2_alt_1: {}
 #
+
 japan_digital_authentication_app:
   - jp.go.digital.auth_and_sign/jp.go.digital.auth_and_sign.ui.main.MainActivity
+
 linphone:
   - org.linphone/org.linphone.ui.main.MainActivity
+
 eigonotomo:
   - jp.co.obunsha.eigonotomo/jp.co.obunsha.eigonotomo.activity.SplashActivity
 
@@ -95,3 +98,33 @@ tool_box_maxcom:
 
 wifi_mouse:
   - com.necta.wifimousefree/com.necta.wifimousefree.material.MainActivity
+
+bancamp_for_artists:
+  - com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity
+
+fossify_keyboard:
+  - org.fossify.keyboard/org.fossify.keyboard.activities.SplashActivity.Green
+
+mirarr:
+  - com.mirarrapp.Mirarr/com.mirarrapp.Mirarr.MainActivity
+
+proton_vpn_calculator:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingCalculator
+
+proton_vpn_notes:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingNotes
+
+proton_vpn_weather:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingWeather
+
+update_me:
+  - com.updateme/com.updateme.MainActivity
+
+proton_vpn:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingDark
+
+proton_vpn:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingActivity
+
+proton_vpn_alt_1:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingRetro
