--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -70,7 +70,7 @@ jaumo:
 liquid_teardown_battery:
   - com.intik.teardown/com.intik.teardown.Home
 
-lucky_patcher: {}
+lucky_patcher_alt_1: {}
 
 micro_gesture:
   - me.i38.gesture/me.i38.gesture.SettingActivity
