--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,9 +8,123 @@
 #
 # new_icon_2_alt_1: {}
 #
+
 japan_digital_authentication_app:
   - jp.go.digital.auth_and_sign/jp.go.digital.auth_and_sign.ui.main.MainActivity
+
 linphone:
   - org.linphone/org.linphone.ui.main.MainActivity
+
 eigonotomo:
   - jp.co.obunsha.eigonotomo/jp.co.obunsha.eigonotomo.activity.SplashActivity
+
+asr_voice_recorder:
+  - com.nll.asr/com.nll.asr.ui.MainActivity
+  - com.nll.asr.license/com.nll.asr.license.MainActivity
+
+bradesco:
+  - com.bradesco/br.com.bradesco.integrador.splash.SplashIconDefault
+
+bradesco_alt_1: {}
+
+cartoes_caixa:
+  - br.gov.caixa.cartoes/br.gov.caixa.cartoes.activities.SplashActivity_
+
+consumidor:
+  - br.com.consumidor/br.com.consumidor.MainActivity
+
+decolar:
+  - com.gm.decolar/com.despegar.whitelabel.home.ui.splash.SplashActivity
+
+du_chinese:
+  - org.sinamon.duchinese/org.sinamon.duchinese.views.MainActivity
+
+du_chinese_alt_1: {}
+
+e_cidadao_saude:
+  - com.ecidadao.saude/crc64016b7bd4896e8d5e.MainActivity
+
+gov_br:
+  - br.gov.meugovbr/br.gov.meugovbr.MainActivity
+
+gov_br_alt_1:
+  - br.gov.meugovbr/br.gov.meugovbr.MainActivity
+
+gsam_battery_monitor_alt_1: {}
+
+havan:
+  - com.artech.eaplic.havan/br.com.havan.app.AppActivity
+
+immersive_chinese:
+  - com.immersive.chinese/com.immersive.chinese.Activity.SplashActivity
+
+immersive_chinese_alt_1: {}
+
+immersive_chinese_alt_2: {}
+
+immersive_chinese_alt_3: {}
+
+jaumo:
+  - com.jaumo/com.jaumo.Main
+
+liquid_teardown_battery:
+  - com.intik.teardown/com.intik.teardown.Home
+
+lucky_patcher_alt_1: {}
+
+micro_gesture:
+  - me.i38.gesture/me.i38.gesture.SettingActivity
+
+musicolet_alt_1: {}
+
+real_drum:
+  - br.com.rodrigokolb.realdrum/br.com.rodrigokolb.realdrum.MainActivity
+
+reddit_alt_5:
+  - com.reddit.frontpage/com.reddit.frontpage.StartActivity
+
+service_center:
+  - com.easycontrol.customercenter/com.easycontrol.customercenter.ui.MainActivity
+
+service_center_alt_1: {}
+
+simple_abp:
+  - mdmt.sabp.free/mdmt.sabp.free.A
+
+tasker_settings: {}
+
+tool_box_maxcom:
+  - maxcom.toolbox.free/maxcom.toolbox.free.ToolBoxMainAct
+
+wifi_mouse:
+  - com.necta.wifimousefree/com.necta.wifimousefree.material.MainActivity
+
+bancamp_for_artists:
+  - com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity
+
+fossify_keyboard:
+  - org.fossify.keyboard/org.fossify.keyboard.activities.SplashActivity.Green
+
+mirarr:
+  - com.mirarrapp.Mirarr/com.mirarrapp.Mirarr.MainActivity
+
+proton_vpn_calculator:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingCalculator
+
+proton_vpn_notes:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingNotes
+
+proton_vpn_weather:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingWeather
+
+update_me:
+  - com.updateme/com.updateme.MainActivity
+
+proton_vpn:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingDark
+
+proton_vpn:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingActivity
+
+proton_vpn_alt_1:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingRetro
