--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,35 @@
-*a.aab
-*.aar
-*.ap_
+.cxx/
+.externalNativeBuild/
+.gradle/
+.idea/
+.navigation/
+.vs*/
+__pycache__/
+app/release/
+bin/
+build/
+captures/
+emails/
+env/
+gen/
+out/
+proguard/
+
 *.apk
-*.class
-*.dex
-*.DS_Store
 *.hprof
 *.iml
 *.jks
 *.keystore
 *.log
-*.pyc
-.cxx/
-.DS_Stores
-.externalNativeBuild/
-.gradle/
-.idea/
-.navigation/
+.DS_Store*
 .project
 .settings
-.vs/
-.vscode/
-__pycache__/
 app/.classpath
 app/.project
 app/.settings
-app/release/
-bin/
-build/
-captures/
 deploymentTargetDropDown.xml
-email/
-gen/
 google-services.json
 local.properties
 misc.xml
-new_drawable.xml
-out/
 output.json
-proguard/
 render.experimental.xml
-resources/utilities/emails/
-updatable.txt
