--- a/.github/workflows/update_requests.yml
+++ b/.github/workflows/update_requests.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Dump emails
       run: |
         cd ${{ env.sd }}
-        python email_dumper.py -U \
+        python email_dumper.py \
           -u '${{ secrets.EMAIL_ADDRESS }}'  \
           -p '${{ secrets.EMAIL_PASSWORD }}' \
           -r '${{ secrets.EMAIL_FOLDER }}'
