restore sort_drawable.py

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,6 @@ deploymentTargetDropDown.xml
 google-services.json
 local.properties
 misc.xml
+new_drawable.xml
 output.json
 render.experimental.xml
