--- a/.github/workflows/check_conflicts.yml
+++ b/.github/workflows/check_conflicts.yml
@@ -2,6 +2,7 @@ name: Check Conflicts
 run-name: conflicts @ ${{ github.sha }}
 
 on:
+  workflow_dispatch:
   pull_request:
     paths:
       - resources/utilities/icons/**
