--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,120 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+aruba_pec:
+  - it.aruba.pec.mobile/it.aruba.mobile.uxlib.loginUx.LoginActivity
+
+atom_for_reddit:
+  - com.atom.reddit.reader/com.atom.reddit.ui.activity.SplashActivity
+
+atom_for_reddit_alt_1: {}
+
+audio_editor:
+  - audioeditor.musiceditor.soundeditor.songeditor/app.better.audioeditor.activity.SplashActivity
+
+bowmasters:
+  - com.playgendary.bowmasters/com.lllibset.LLActivity.LLActivity
+
+brain_out:
+  - com.mind.quiz.brain.out/com.mind.quiz.brain.out.MainActivity
+
+clash_meta:
+  - com.github.metacubex.clash.meta/com.github.kr328.clash.MainActivity
+
+classcharts_students:
+  - com.classcharts.android.student/com.classcharts.android.student.MainActivity
+
+craftsman:
+  - com.craftsman.go/com.mojang.minecraftpe.MainActivity
+
+cync:
+  - com.ge.cbyge/com.savantsystems.oneapp.MainActivity}" drawable="cync"/>
+
+device_clone:
+  - com.hihonor.android.clone/com.hihonor.android.clone.activity.sender.ChooseReceiveSendActivity
+
+discord_alt_2: {}
+
+enel_energia:
+  - it.enel/com.example.it_full_digital.MainActivity
+
+game_launcher:
+  - com.lge.gamelauncher/com.lge.gamelauncher.ui.home.GameLauncherActivity
+
+idbi_bank:
+  - com.snapwork.IDBI/com.snapwork.IDBI.IDBICordovaActivity
+
+koloro:
+  - com.cerdillac.persetforlightroom/com.lightcone.cerdillac.koloro.activity.SplashActivity
+
+koloro_alt_1: {}
+
+led_keyboard:
+  - com.flashkeyboard.leds/com.flashkeyboard.leds.ui.splash.SplashActivity
+
+listonic_alt_1: {}
+
+lumosity:
+  - com.lumoslabs.lumosity/com.lumoslabs.lumosity.activity.LaunchActivity
+
+magalu:
+  - com.luizalabs.mlapp/com.luizalabs.mlapp.home.ui.HomeActivity
+
+meu_inss:
+  - br.gov.dataprev.meuinss/br.gov.dataprev.meuinss.MainActivity
+
+phone_guardian_alt_1: {}
+
+pvr_cinemas:
+  - com.net.pvr/com.net.pvr.ui.splash.SplashActivity
+
+pvz_heroes_alt_1: {}
+
+raiplay_alt_1: {}
+
+risk:
+  - com.hasbro.riskbigscreen/com.google.firebase.MessagingUnityPlayerActivity
+
+snapedit:
+  - snapedit.app.remove/snapedit.app.remove.screen.splash.SplashScreenActivity
+
+that_level_again_alt_1: {}
+
+theotown:
+  - info.flowersoft.theotown.theotown/info.flowersoft.theotown.theotown.MainActivity
+
+theotown_alt_1: {}
+
+transmita_para_a_tv_xcast:
+  - cast.video.screenmirroring.casttotv/com.inshot.cast.xcast.SplashActivity
+
+ultra_volume:
+  - com.treydev.volume/com.zipoapps.premiumhelper.ui.splash.PHSplashActivity
+
+wearfit_pro:
+  - com.wakeup.howear/com.wakeup.howear.view.app.SplashActivity
+
+wetter_com:
+  - com.wetter.androidclient/com.wetter.androidclient.EntryActivity
+
+whatlisten:
+  - br.com.music.wlisten2.app/br.com.fabiano.developer.appmusic.Main
+
+whatlisten_alt_1: {}
+
+windtre:
+  - it.wind.myWind/it.wind.windtre.
+  
+windtre_alt_1: {}
+
+xpak_installer:
+  - com.wuliang.xapkinstaller/com.wuliang.xapkinstaller.SplashActivity
+
+xpak_installer_alt_1: {}
+
+yacine_tv:
+  - ver3.ycntivi.off/dev.pankaj.yacinetv.ui.splash.SplashActivity
+
+zombie_tsunami:
+  - net.mobigame.zombietsunami/net.mobigame.zombietsunami.ZombieActivity
