--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ deploymentTargetDropDown.xml
 google-services.json
 local.properties
 misc.xml
+new_appfilter.xml
 new_drawable.xml
 output.json
 render.experimental.xml
