--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -125,3 +125,39 @@ yacine_tv:
 
 zombie_tsunami:
   - net.mobigame.zombietsunami/net.mobigame.zombietsunami.ZombieActivity
+
+applistbackup:
+  - org.androidlabs.applistbackup/org.androidlabs.applistbackup.MainActivity
+
+duress:
+  - me.lucky.duress/me.lucky.duress.MainActivity
+
+fossify_calculator:
+  - org.fossify.calculator/org.fossify.calculator.activities.SplashActivity.Green
+
+linkdy:
+  - com.jgeek00.linkdy/com.jgeek00.linkdy.MainActivity
+
+lyrics_grabbr:
+  - com.illusionman1212.lyricsgrabbr/com.illusionman1212.lyricsgrabbr.MainActivity
+
+pinkt:
+  - com.fibelatti.pinboard/com.fibelatti.pinboard.features.MainActivity
+
+shikiapp:
+  - org.application.shikiapp/org.application.shikiapp.MainActivity
+
+shoppinglist:
+  - pl.edu.pjwstk.s999844.shoppinglist/pl.edu.pjwstk.s999844.shoppinglist.activities.MainActivity
+
+vikunja:
+  - io.vikunja.app/io.vikunja.flutteringvikunja.MainActivity
+
+whitehole:
+  - com.bera.whitehole/com.bera.whitehole.ui.MainActivity
+
+youamp:
+  - ru.stersh.youamp/ru.stersh.youamp.main.ui.MainActivity
+
+icsx5:
+  - at.bitfire.icsdroid/at.bitfire.icsdroid.ui.views.CalendarListActivity
