--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,7 +36,7 @@ craftsman:
   - com.craftsman.go/com.mojang.minecraftpe.MainActivity
 
 cync:
-  - com.ge.cbyge/com.savantsystems.oneapp.MainActivity}" drawable="cync"/>
+  - com.ge.cbyge/com.savantsystems.oneapp.MainActivity
 
 device_clone:
   - com.hihonor.android.clone/com.hihonor.android.clone.activity.sender.ChooseReceiveSendActivity
