new icon: Samsung Find

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -11,3 +11,6 @@
 
 cync:
   - com.ge.cbyge/com.savantsystems.oneapp.MainActivity
+
+samsung_find:
+  - com.samsung.android.app.find/com.samsung.android.app.find.SplashActivity
