--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,3 +14,6 @@ cync:
 
 samsung_find:
   - com.samsung.android.app.find/com.samsung.android.app.find.SplashActivity
+
+nw_publisher:
+  - com.jwscheduler.jws/com.jwscheduler.jws.MainActivity
