new icon: iF Design

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -17,3 +17,6 @@ samsung_find:
 
 nw_publisher:
   - com.jwscheduler.jws/com.jwscheduler.jws.MainActivity
+
+if_design:
+  - de.ifdesign.awards/de.ifdesign.awards.MainActivity
