new icon: MangaLib

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -20,3 +20,6 @@ nw_publisher:
 
 if_design:
   - de.ifdesign.awards/de.ifdesign.awards.MainActivity
+
+mangalib:
+  - ru.libapp/ru.libapp.ui.main.MainActivity
