icon rename: cync -> cync_alt_1

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -9,8 +9,7 @@
 # new_icon_2_alt_1: {}
 #
 
-cync:
-  - com.ge.cbyge/com.savantsystems.oneapp.MainActivity
+cync_alt_1: {}
 
 samsung_find:
   - com.samsung.android.app.find/com.samsung.android.app.find.SplashActivity
