--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,17 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+cync_alt_1: {}
+
+samsung_find:
+  - com.samsung.android.app.find/com.samsung.android.app.find.SplashActivity
+
+nw_publisher:
+  - com.jwscheduler.jws/com.jwscheduler.jws.MainActivity
+
+if_design:
+  - de.ifdesign.awards/de.ifdesign.awards.MainActivity
+
+mangalib:
+  - ru.libapp/ru.libapp.ui.main.MainActivity
