add new compinfos based according to find_similar.py output

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,3 +22,106 @@ if_design:
 
 mangalib:
   - ru.libapp/ru.libapp.ui.main.MainActivity
+
+teamfight_tactics:
+  - com.riotgames.league.teamfighttacticsvn/com.riotgames.leagueoflegends.RiotNativeActivity
+
+one__plus_community:
+  - net.oneplus.forums/com.oplus.community.activity.LauncherActivity
+
+guardian_tales:
+  - com.kakaogames.gdtskr/com.kakaogame.KGUnityPlayerActivity
+
+myradar:
+  - com.acmeaom.android.myradarpro/com.acmeaom.android.myradar.app.activity.LaunchActivity
+
+retroarch:
+  - nes.snes.gba.fcemulator.n64/org.cocos2dx.cpp.AppActivity
+
+android_system_webview:
+  - com.google.android.webview.canary/org.chromium.android_webview.devui.LauncherActivity
+
+airguard:
+  - de.seemoo.at_tracking_detection.release/de.seemoo.at_tracking_detection.ui.MainActivity
+
+musify:
+  - com.gokadzev.musify.fdroid/com.ryanheise.audioservice.AudioServiceActivity
+
+dr_web:
+  - com.drweb.pro/com.drweb.ui.main.MainActivity
+
+godville:
+  - com.godvillegame.android/ru.godville.android4.base.activities.LaunchActivity
+
+futo_keyboard:
+  - org.futo.inputmethod.latin.playstore/org.futo.inputmethod.latin.uix.settings.SettingsActivity
+
+officesuite:
+  - com.mobisystems.mobiscanner/com.mobisystems.office.splashScreen.SplashScreenActivity
+
+procam_x:
+  - com.intermedia.hd.camera.professional/com.antafunny.burstcamera.MainActivity
+
+canva:
+  - com.canva.editor.samsung/com.canva.app.editor.splash.SplashActivity
+
+limbo_emulator:
+  - com.limbo.emu.main.arm/com.limbo.emu.main.arm.LimboEmuActivity
+
+spotify:
+  - com.spoti.plus/com.spotify.music.MainActivity
+
+dolphin_emulator:
+  - .dolphinemu.mmjr/org.dolphinemu.dolphinemu.ui.main.MainActivity
+
+toyota:
+  - in.co.tkm.toyotaconnect/com.toyota.oneapp.ui.splash.SplashActivity
+
+mercadolibre:
+  - com.mercadolibre/com.mercadolibre.splash.SplashActivity
+
+google_wear_os:
+  - com.google.android.wearable.app.cn/com.google.android.clockwork.companion.launcher.LauncherActivity
+
+app_lock:
+  - com.domobile.applockwatcher/com.domobile.applockwatcher.LaunchActivity
+
+pojav_launcher:
+  - net.kdt.pojavlaunch/net.kdt.pojavlaunch.TestStorageActivity
+  - net.kdt.pojavlaunch.debug/net.kdt.pojavlaunch.TestStorageActivity
+
+d_and_d_beyond:
+  - com.fandom.playercompanion/com.fandom.feature.splash.SplashActivity
+
+angry_birds_star_wars:
+  - com.rovio.angrybirdsstarwars.ads.iap/com.rovio.fusion.App
+
+_30_day_fitness_challenge:
+  - com.popularapp.thirtydayfitnesschallengepro/com.popularapp.thirtydayfitnesschallengepro.activity.StartActivity
+
+my_therapy:
+  - eu.smartpatient.mytherapy/eu.smartpatient.mytherapy.feature.account.presentation.onboarding.WelcomeActivity
+
+calendar:
+  - com.android.calendar.go/com.android.calendar.go.homepage.AllInOneActivity
+
+santander:
+  - pl.bzwbk.bzwbk24/es.bancosantander.apps.mobile.android.activities.PublicActivity
+
+max_stream:
+  - com.wbd.stream/com.wbd.fuse.appcore.FuseActivity
+
+calculator:
+  - com.tcl.tct.calculator/com.tct.calculator.activity.CalculatorActivity
+
+ai_gallery:
+  - com.gallery20/com.gallery20.HomeActivity
+
+assistant_for_android:
+  - com.androidassistant.free/com.advancedprocessmanager.MainActivity
+
+bit__torrent:
+  - com.bittorrent.client/com.bittorrent.app.main.MainActivity
+
+mt_manager:
+  - bin.mt.plus.canary/bin.mt.plus.MainLightIcon
