--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -125,3 +125,6 @@ bit__torrent:
 
 mt_manager:
   - bin.mt.plus.canary/bin.mt.plus.MainLightIcon
+
+zonetouch3:
+  - au.com.polyaire.zonetouch3/au.com.polyaire.zonetouch3.MainActivity
