Add Solax cloud icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -128,3 +128,6 @@ mt_manager:
 
 zonetouch3:
   - au.com.polyaire.zonetouch3/au.com.polyaire.zonetouch3.MainActivity
+
+solaxcloud:
+  - com.solaxcloud.starter/com.solaxcloud.starter.FirstAcivitivity
