Add getaround icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -290,3 +290,6 @@ vpn_proxy_master:
 
 xiaomi_earbuds:
   - com.mi.earphone/com.xiaomi.fitness.login.SplashActivity
+
+getaround:
+  - com.c4mprod.voiturelib/com.drivy.android.presentation.MainActivity
