Add some icons, fix icon linkages (#917)
* Fix booking.com icon link

* Fix NYT icon link

* Add icon for zonetouch3

* Update icon link for eero

* Add Solax cloud icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -125,3 +125,9 @@ bit__torrent:
 
 mt_manager:
   - bin.mt.plus.canary/bin.mt.plus.MainLightIcon
+
+zonetouch3:
+  - au.com.polyaire.zonetouch3/au.com.polyaire.zonetouch3.MainActivity
+
+solaxcloud:
+  - com.solaxcloud.starter/com.solaxcloud.starter.FirstAcivitivity
