Add La Bobine icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -293,3 +293,6 @@ xiaomi_earbuds:
 
 getaround:
   - com.c4mprod.voiturelib/com.drivy.android.presentation.MainActivity
+
+la_bobine:
+  - com.bobine.bobineart/com.bobine.bobineart.MainActivity
