--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -296,3 +296,6 @@ getaround:
 
 la_bobine:
   - com.bobine.bobineart/com.bobine.bobineart.MainActivity
+
+citiz:
+  - coop.lestilleuls.citiz/coop.lestilleuls.citiz.SplashActivity
