--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -131,3 +131,39 @@ zonetouch3:
 
 solaxcloud:
   - com.solaxcloud.starter/com.solaxcloud.starter.FirstAcivitivity
+
+bazarnote:
+  - com.rootminusone8004.bazarnote/com.rootminusone8004.bazarnote.SessionActivity
+
+cryptool:
+  - io.github.nfdz.cryptool/io.github.nfdz.cryptool.AppActivity
+
+fluxtube:
+  - com.fazilvk.fluxtube/com.fazilvk.fluxtube.MainActivity
+
+grocerygenius:
+  - com.rendox.grocerygenius/com.rendox.grocerygenius.MainActivity
+
+js_dict:
+  - io.github.petlyh.jsdict/io.github.petlyh.jsdict.MainActivity
+
+karbon_editor:
+  - com.rk.xededitor/com.rk.xededitor.MainActivity.MainActivity
+
+meru:
+  - com.getmeru.app/com.getmeru.app.MainActivity
+
+notewise:
+  - com.yygg.note.app/com.yygg.note.app.home.HomeActivity
+
+payback:
+  - pl.payback/de.payback.app.ui.main.MainActivity
+
+traditional_t9:
+  - io.github.sspanak.tt9/io.github.sspanak.tt9.preferences.PreferencesActivity
+
+ultrahuman:
+  - com.ultrahuman.android/com.ultrahuman.android.splash.SplashActivity
+
+website_monitor:
+  - com.manimarank.websitemonitor/com.manimarank.websitemonitor.ui.splash.SplashActivity
