--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -167,3 +167,9 @@ ultrahuman:
 
 website_monitor:
   - com.manimarank.websitemonitor/com.manimarank.websitemonitor.ui.splash.SplashActivity
+
+cloudstream:
+  - com.lagradost.cloudstream3/com.lagradost.cloudstream3.ui.account.AccountSelectActivity
+
+camera:
+  - org.codeaurora.snapcar/com.android.camera.CameraLauncher
