--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -156,7 +156,7 @@ meru:
 notewise:
   - com.yygg.note.app/com.yygg.note.app.home.HomeActivity
 
-payback:
+payback_nagrody_za_zakupy:
   - pl.payback/de.payback.app.ui.main.MainActivity
 
 traditional_t9:
