add new compinfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -173,3 +173,27 @@ cloudstream:
 
 camera:
   - org.codeaurora.snapcar/com.android.camera.CameraLauncher
+
+amazon_flex:
+  - com.amazon.flex.rabbit/com.amazon.rabbit.android.presentation.core.LaunchActivity
+
+adidas_confirmed:
+  - com.adidas.confirmed.app/com.adidas.confirmed.base.ui.MainActivity
+
+discover:
+  - com.discoverfinancial.mobile/r13fa4bdb.rcd00874d.e8944d836.y0b26d82e
+
+fandango:
+  - com.fandango/com.fandango.material.activity.LaunchAdActivity
+
+leafly:
+  - leafly.android/com.leafly.android.activities.launch.LaunchActivity
+
+seeker:
+  - com.companyname.andriodapp1/crc646350f44cde9e1cf7.MainActivity
+
+t_mobile_life:
+  - com.tmobile.tuesdays/com.telekom.tworld.dashboard.DashboardActivity
+
+taco_bell:
+  - com.tacobell.ordering/com.tacobell.splash.SplashActivity
