new icon: Mighty Dice

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -197,3 +197,6 @@ t_mobile_life:
 
 taco_bell:
   - com.tacobell.ordering/com.tacobell.splash.SplashActivity
+
+mighty_dice:
+  - com.cjdesign.mightydice/com.unity3d.player.UnityPlayerActivity
