Add LibraryThing icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -299,3 +299,6 @@ la_bobine:
 
 citiz:
   - coop.lestilleuls.citiz/coop.lestilleuls.citiz.SplashActivity
+
+librarything:
+  - com.librarything.librarything/com.librarything.librarything.HomeActivity
