Add TicketToRide icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -302,3 +302,6 @@ citiz:
 
 librarything:
   - com.librarything.librarything/com.librarything.librarything.HomeActivity
+
+ticket_to_tide:
+  - com.marmalade.tickettoride/com.unity3d.player.UnityPlayerActivity
