Add ScoreApp 7 Wonders icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -305,3 +305,6 @@ librarything:
 
 ticket_to_tide:
   - com.marmalade.tickettoride/com.unity3d.player.UnityPlayerActivity
+
+scoreapp_7_wonders:
+  - com.houchins.andy.score7wonders/com.houchins.andy.score7wonders.activity.ChooseGameActivity
