--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -308,3 +308,6 @@ ticket_to_tide:
 
 scoreapp_7_wonders:
   - com.houchins.andy.score7wonders/com.houchins.andy.score7wonders.activity.ChooseGameActivity
+
+swile:
+  - hr.lunc.client/hr.lunc.client.activities.SplashActivity
