--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -311,3 +311,6 @@ scoreapp_7_wonders:
 
 swile:
   - hr.lunc.client/hr.lunc.client.activities.SplashActivity
+
+ugc:
+  - air.ugc.fr.ugcdirect/com.ugc.MainActivity
