Fix Carrefour link

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -314,3 +314,6 @@ swile:
 
 ugc:
   - air.ugc.fr.ugcdirect/com.ugc.MainActivity
+
+carrefour:
+  - com.carrefour.fid.android/com.carrefour.fid.android.presentation.ui.splash.SplashActivity
