Add Imgflip icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -317,3 +317,6 @@ ugc:
 
 carrefour:
   - com.carrefour.fid.android/com.carrefour.fid.android.presentation.ui.splash.SplashActivity
+
+imgflip:
+  - com.imgflip.twa/com.imgflip.twa.LauncherActivity
