--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -320,3 +320,6 @@ carrefour:
 
 imgflip:
   - com.imgflip.twa/com.imgflip.twa.LauncherActivity
+
+luko:
+  - com.getluko.cover.app/com.getluko.cover.app.MainActivity
