Add Saisonkalender icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -323,3 +323,6 @@ imgflip:
 
 luko:
   - com.getluko.cover.app/com.getluko.cover.app.MainActivity
+
+saisonkalender:
+  - flunzmas.seasoncalendar/flunzmas.seasoncalendar.MainActivity
