Fix swissborg icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -326,3 +326,6 @@ luko:
 
 saisonkalender:
   - flunzmas.seasoncalendar/flunzmas.seasoncalendar.MainActivity
+
+swissborg:
+  - com.swissborg.android/com.swissborg.android.navigation.NavigationActivity
