Add Planity icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -329,3 +329,6 @@ saisonkalender:
 
 swissborg:
   - com.swissborg.android/com.swissborg.android.navigation.NavigationActivity
+
+planity:
+  - com.planitypublic/com.planitypublic.MainActivity
