Add France identité icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -332,3 +332,6 @@ swissborg:
 
 planity:
   - com.planitypublic/com.planitypublic.MainActivity
+
+france_identité:
+  - fr.gouv.franceidentite/fr.gouv.franceidentite.activities.MainActivity
