Add Conjugaison icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -335,3 +335,6 @@ planity:
 
 france_identité:
   - fr.gouv.franceidentite/fr.gouv.franceidentite.activities.MainActivity
+
+conjugaison:
+  - vatefaireconjuguer.app/vatefaireconjuguer.app.MainActivity
