Add EDF & Moi icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -338,3 +338,6 @@ france_identité:
 
 conjugaison:
   - vatefaireconjuguer.app/vatefaireconjuguer.app.MainActivity
+
+edf_et_moi:
+  - com.edf.edfetmoi/com.edf.edfetmoi.presentation.feature.splash.presentation.SplashActivity
