Add Santé wtw icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -341,3 +341,6 @@ conjugaison:
 
 edf_et_moi:
   - com.edf.edfetmoi/com.edf.edfetmoi.presentation.feature.splash.presentation.SplashActivity
+
+santé_wtw:
+  - com.gras_savoye.sante/crc64f3dfc95746bfa99c.MainActivity
