Add VerbEx icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -344,3 +344,6 @@ edf_et_moi:
 
 santé_wtw:
   - com.gras_savoye.sante/crc64f3dfc95746bfa99c.MainActivity
+
+verbex:
+  - org.educapp.verbex/org.educapp.verbex.MainActivity
