Fix OpenFoodFacts icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -347,3 +347,6 @@ santé_wtw:
 
 verbex:
   - org.educapp.verbex/org.educapp.verbex.MainActivity
+
+openfoodfacts:
+  - openfoodfacts.github.scrachx.openfood/org.openfoodfacts.app.MainActivity
