--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -290,3 +290,24 @@ vpn_proxy_master:
 
 xiaomi_earbuds:
   - com.mi.earphone/com.xiaomi.fitness.login.SplashActivity
+
+brilliant_alt_1: {}
+
+notesnook_alt_1: {}
+
+you_com_alt_1: {}
+
+you_com:
+  - com.you.browser/com.you.chat.MainActivity
+
+quickify:
+  - quick.read.app/adambl4.issisttalkback.presentation.view.MainActivity
+
+speed_reader:
+  - com.vanniktech.speedreading/com.vanniktech.speedreading.SpeedReadingMainActivity
+
+spreeder:
+  - com.ereflect.spreeder/com.ereflect.spreeder.MainActivity
+
+spritz:
+  - com.spritz.newapp/com.spritz.newapp.MainActivity
