new icons by johnmaneca; add missing and fix others

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -290,3 +290,39 @@ vpn_proxy_master:
 
 xiaomi_earbuds:
   - com.mi.earphone/com.xiaomi.fitness.login.SplashActivity
+
+alexgames:
+  - net.alexbarry.alexgames/net.alexbarry.alexgames.MainActivity
+
+beans:
+  - net.helcel.beans/net.helcel.beans.activity.MainActivity
+
+bookwyrm:
+  - nl.privacydragon.bookwyrm/nl.privacydragon.bookwyrm.MainActivity
+
+bubble2:
+  - com.github.edeso.bubble2/com.nkanaev.comics.activity.MainActivity
+
+claro:
+  - com.claroColombia.contenedor/com.speedymovil.contenedor.gui.activities.AppsContainerActivity
+
+cows_revenge:
+  - org.pipoypipagames.cowsrevenge/org.godotengine.godot.Godot
+
+cows_revenge_alt_1: {}
+
+dest_sol:
+  - com.miloshpetrov.sol2.android/com.miloshpetrov.sol2.android.SolAndroid
+
+easter_eggs:
+  - com.dede.android_eggs/com.dede.android_eggs.views.main.EasterEggsActivity
+
+every_door:
+  - info.zverev.ilya.every_door/info.zverev.ilya.every_door.MainActivity
+
+every_door_alt_1: {}
+
+my_att_alt_1: {}
+
+windtre:
+  - it.wind.myWind/it.wind.windtre.SplashActivity
