Added 7 Icons (including 3 updates) + 1 ComponentInfo (#922)
* Delete resources/vectors/brilliant.svg

* Delete app/src/main/res/drawable-nodpi/brilliant.png

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Update icons.yml

* Add files via upload

* Add files via upload

* Update drawable.xml

* Update drawable.xml

* Update appfilter.xml

* Update appfilter.xml

* Delete contribs/icons/you_com_alt_1.png

* Delete contribs/icons/you_com_alt_1.svg

* Delete contribs/icons/notesnook_alt_1.png

* Delete contribs/icons/notesnook_alt_1.svg

* Delete contribs/icons/brilliant_alt_1.png

* Delete contribs/icons/brilliant_alt_1.svg

* Update icons.yml

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -290,3 +290,18 @@ vpn_proxy_master:
 
 xiaomi_earbuds:
   - com.mi.earphone/com.xiaomi.fitness.login.SplashActivity
+
+you_com:
+  - com.you.browser/com.you.chat.MainActivity
+
+quickify:
+  - quick.read.app/adambl4.issisttalkback.presentation.view.MainActivity
+
+speed_reader:
+  - com.vanniktech.speedreading/com.vanniktech.speedreading.SpeedReadingMainActivity
+
+spreeder:
+  - com.ereflect.spreeder/com.ereflect.spreeder.MainActivity
+
+spritz:
+  - com.spritz.newapp/com.spritz.newapp.MainActivity
