build.gradle: change output filename

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 		multiDexEnabled true
 
 		// Naming app bundles
-		setArchivesBaseName("${parent.name}-v${versionCode}")
+		setArchivesBaseName("delta-v${versionName}")
 	}
 
 	bundle {
