update contributed icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -326,3 +326,8 @@ my_att_alt_1: {}
 
 windtre:
   - it.wind.myWind/it.wind.windtre.SplashActivity
+
+cat_avatar_generator:
+  - com.agateau.catgenerator/com.agateau.catgenerator.MainActivity
+
+cat_avatar_generator_alt_1: {}
