--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -348,7 +348,7 @@ swissborg:
 planity:
   - com.planitypublic/com.planitypublic.MainActivity
 
-france_identité:
+france_identite:
   - fr.gouv.franceidentite/fr.gouv.franceidentite.activities.MainActivity
 
 conjugaison:
@@ -357,7 +357,7 @@ conjugaison:
 edf_et_moi:
   - com.edf.edfetmoi/com.edf.edfetmoi.presentation.feature.splash.presentation.SplashActivity
 
-santé_wtw:
+sante_wtw:
   - com.gras_savoye.sante/crc64f3dfc95746bfa99c.MainActivity
 
 verbex:
